--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,6 +12,7 @@ ENV VSCODE_EXTENSTIONS_DIR=${HOME_DIR}/.vscode-server/extensions
 RUN apk update --no-cache && \ 
     apk add --no-cache \ 
     bash \
+    ssh \
     shadow \
     git \
     gcc \
